# website

./: .gitignore  CNAME  Cargo.toml  README.md  Trunk.toml  index-7d0e2a1e128560d.js  index-ae90ef35e08ae1ca.js  index-ae90ef35e08ae1ca_bg.wasm  index.html  website.js  website_bg.wasm
.github/workflows/: pages.yml
src/: app.rs  main.rs
